--- a/invitations.html
+++ b/invitations.html
@@ -128,7 +128,7 @@ body {
 <body> 
 
   <ul class="nav bg-white py-2 px-lg-5">
-  <div class='navbar-brand d-flex align-items-center header text-dark'>Xam</div>
+  <div class='navbar-brand h2 d-flex align-items-center header text-dark'>Quizer</div>
   <li class="nav-item">
     <a class="nav-link text-dark" href="#">Home</a>
   </li>
