--- a/create.html
+++ b/create.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-    <title>Home</title>
+    <title>Quizer-Create Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href = "img/logo.png">
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -17,8 +18,8 @@
 </head>
 <body> 
 
-  <ul class="nav bg-white py-2 px-lg-5">
-  <div class='navbar-brand d-flex align-items-center header text-dark'>Xam</div>
+  <ul class="nav bg-white py-3 px-lg-5">
+  <div class='navbar-brand h2 d-flex align-items-center header text-dark'>Quizer</div>
   <li class="nav-item">
     <a class="nav-link text-dark" href="http://localhost/Bsg Site/option.php">Home</a>
   </li>
@@ -26,7 +27,7 @@
     <a class="nav-link  text-dark" href="http://localhost/Bsg Site/myexams.php?q=0">My exams</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link  text-dark" href="#">Create quiz</a>
+    <a class="nav-link  text-dark" href="#"><b>Create quiz</b></a>
   </li>
  <li class="nav-item">
     <a class="nav-link  text-dark" href="http://localhost/Bsg Site/message.php">Messages</a>
@@ -44,20 +45,22 @@
   </header>
   <div class="row py-4">
 	 <div class="col-lg-5 col-md-8 px-5 col-sm-10 mx-auto">
-<form onSubmit="return validateForm()" name="frmq" method="post" action="http://localhost/Bsg Site/create.php?q=1">
+<form enctype="multipart/form-data" onSubmit="return validateForm()" name="frmq" method="post" action="http://localhost/Bsg Site/create.php?q=1">
 	
 <h1 class="h3 mb-4 fw-normal text-center">Fill These Details</h1>
 <label for="name" class="fw-light p-2">Name of the Quiz</label>
 <input type="text" name="title" class="form-control mb-4" placeholder="Name" autofocus required>
 <label for="noq" class="fw-light p-2">No. of questions</label>
 <input type="text" name="noq" class="form-control mb-4" placeholder="Number of questions" required>
+<label for="image" class="fw-light p-2">Add Quiz Thumbnail (Optional)</label>
+<input type="file" name="image" class="form-control mb-4">
 <div class="text-center">
 <input class="mt-2 w-50 btn btn-lg btn-primary" type="submit">
 </div>
 </form>
 </div>
-      <div class="col-lg-5 mx-auto py-4" >
-            <i data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-out-right"><img class="img-responsive img-fluid" src="img/create exam.svg" >
+      <div class="col-lg-5 mx-auto py-5" >
+            <i data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-out-right"><img class="img-responsive mt-4 img-fluid" src="img/create exam.svg" >
             <rect width="100%" height="100%" fill="#777"/></i>
       </div>
 </div>
