--- a/signup.html
+++ b/signup.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
-
-    <link rel="icon" href = "img/logo.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  
+    
 
     <!-- Bootstrap core CSS -->
 <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -77,31 +79,36 @@
 
 </head>
 <body class="bo">
-   <div class="container hero header shadow-lg  text-center bg-white my-4 py-5 " >
+   <div class="container hero header shadow-lg  text-center bg-white my-3 py-5 " >
    	<header class="mb-auto mx-auto">
     <div>
-      <h1 class="">Quizer-Beta</h1>
+      <h1 data-aos="zoom-in" data-aos-delay="100" class="">Quizer-Beta</h1>
     </div>
   </header>
 	   <div class="row py-4">
-	    <div class="col-lg-5 col-md-8 px-5 col-sm-10 mx-auto order-sm-2 order-lg-1">
+	    <div data-aos="fade-right" data-aos-delay="300" class="col-lg-5 col-md-8 px-5 col-sm-10 mx-auto order-sm-2 order-lg-1">
 
-            <form action="http://localhost/Bsg Site/check.php?val=1" method="post">
+            <form enctype="multipart/form-data" action="http://localhost/Bsg Site/check.php?val=2" method="POST" >
                  <i class="fas fa-user-circle py-4 fa-4x"></i>
-                   <h1 class="h3 mb-4 fw-normal">Please Sign in</h1>
+                    <div class="mb-3">
+                    <input name="image" type="file" class="form-control"></div>
                     <label for="inputEmail" class="visually-hidden">Email address</label>
                    <input type="text" id="inputEmail" name="username" class="form-control my " placeholder="Email address" required autofocus><br>
                     <label for="inputPassword" class="visually-hidden">Password</label>
                     <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-                    <button class="mt-4 w-50 btn btn-lg btn-primary" type="submit">Sign in</button>
-                   <p class="mt-3 text-muted">Not a User?&nbsp; <a href="signup.html" class="">Sign up</a></p>
+                    <button class="mt-4 w-50 btn btn-lg btn-primary" type="submit">Sign Up</button>
+                   <p class="mt-3 text-muted">Already a User?&nbsp; <a href="index.html" class="">Sign In</a></p>
+                   
             </form>
 	   	</div>
-      <div class="col-lg-5 mx-auto order-sm-1 order-lg-2 " >
+      <div data-aos="fade-left" data-aos-delay="300" class="col-lg-5 mx-auto order-sm-1 order-lg-2 " >
             <i data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-out-right"><img class="img-responsive img-fluid" src="img/designer.svg" >
             <rect width="100%" height="100%" fill="#777"/></i>
       </div>
 	</div>
   </div>
+    <script>
+  AOS.init();
+</script>
 </body>
 </html>
